kuberentes/deployment.yaml
# kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart-disease-app
  labels:
    app: heart-disease-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: heart-disease-app
  template:
    metadata:
      labels:
        app: heart-disease-app
    spec:
      containers:
      - name: heart-disease-app
        image: heart-disease-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8501
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /_stcore/health
            port: 8501
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /_stcore/health
            port: 8501
          initialDelaySeconds: 15
          periodSeconds: 10
